--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "dependencies": {
     "asciiart-logo": "^0.1.7",
     "cheerio": "^1.0.0-rc.2",
+    "discord.js": "^12.5.1",
     "eris-sharder": "github:Discord-Sharders/eris-sharder#dev",
     "eslint-config-semistandard": "^12.0.1",
     "eslint-config-standard": "^11.0.0",
